yaml/training_prod/ingress_de.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: latest
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ansible-puzzle
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: acend-training-chart-0.1.4
    public: true"
  name: latest-ansible-puzzle-itc-de
  namespace: pitc-ansible-training-prod
spec:
  rules:
  - host: ansible.puzzle-itc.de
    http:
      paths:
      - backend:
          serviceName: latest-ansible-puzzle
          servicePort: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
    - {}
